--- a/myshop/src/main/resources/templates/fragments/header.html
+++ b/myshop/src/main/resources/templates/fragments/header.html
@@ -38,10 +38,10 @@
 							<a class="nav-link" href="/members/logout">로그아웃</a>
 						</li>
 					</ul>
-					<form class="d-flex" role="search">
-						<input class="form-control me-2" type="search"
-							placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success" type="submit">Search</button>
+					<form class="d-flex" role="search" th:action="@{/}" method="get">
+						<input name="searchQuery" class="form-control me-2" type="search"
+							placeholder="검색어 입력" aria-label="Search">
+						<button class="btn btn-outline-success" type="submit" style="width: 100px">검색</button>
 					</form>
 				</div>
 			</div>
